kubernetes/base/apps/media/archivebox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  namespace: media
spec:
  selector:
    app: archivebox
  ports:
    - name: http
      port: 8000
